--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     box-sizing: border-box;
 }
 
@@ -63,11 +63,109 @@ main{
 
 .main-facts > li {
 line-height: 19px;
-padding-block: 10px;
+padding-block: 10px; */
 /* Padding top and bottom */
-}
+/* }
 
 .main-facts > li::marker{
     font-size: 1.4rem;
     color: #61DAFB;
+} */
+
+/* React Facts */
+
+
+
+
+
+
+* {
+    box-sizing: border-box;
+}
+
+body{
+    margin:0;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+nav {
+    height: 70px;
+    display: flex;
+    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+
+.gray{
+    color:#918E9B;
+}
+.bold {
+font-weight: bold;
+}
+.nav-logo{
+    max-width: 100px;
+    padding: 10px;
+    margin-left: 40px;
+}
+
+section{
+    padding: 20px;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+}
+
+.main-image{
+    max-width: 100%;
+    align-self: center;
+}
+
+.main-header{
+    margin-bottom:16px;
+}
+
+.main-text{
+    margin-top:0;
+}
+
+
+.card-list {
+    display: flex;
+    
+    gap:20px;
+}
+
+.card {
+    width: 175px;
+    font-size: 12px;      
+    display: flex;         
+    flex: 1; 
+    flex-direction: column;
+    position: relative;
+}
+
+.card-image{
+    width: 100%;
+    border-radius: 9px;
+}
+
+.card-stats{
+    display: flex;
+    align-items: center;
+
+}
+
+.card-star{
+    height: 14px;
+}
+
+.card-badge{
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
 }
